# liquidroute

./: .gitignore  CLAUDE.md  README.md
docs/: AHMO.md  mathematical_optimization.md  problem.md  trading_algorithms.md
liquidroute-geyser-plugin/: Cargo.toml  README.md  build.rs  config.json
liquidroute-geyser-plugin/src/: config.rs  lib.rs  plugin.rs  version.rs
