[package]
name = "liquidroute-geyser-plugin"
version = "0.1.0"
edition = "2021"
description = "LiquidRoute Geyser Plugin for DEX aggregation"
authors = ["LiquidRoute Team <info@liquidroute.com>"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

[dependencies]
agave-geyser-plugin-interface = "=2.1.17"
anyhow = "1.0.91"
bincode = "1.3.3"
bs58 = { version = "0.5.1", default-features = false }
clap = "2.33.1"
crossbeam-channel = "0.5.13"
log = "0.4.22"
serde = "1.0.213" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.15"
serde_derive = "1.0.213" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.132"
serde_with = { version = "3.11.0", default-features = false }
serde_yaml = "0.9.34"
thiserror = "1.0.65"
tokio = "1.43.0"
tokio-serde = "0.8"
tokio-stream = "0.1.16"
tokio-tungstenite = "0.20.1"
tokio-util = "0.7"

[build-dependencies]
anyhow = "1.0.91"