[package]
name = "liquidroute-geyser-plugin"
version = "0.1.0"
edition = "2021"
description = "LiquidRoute Geyser Plugin for DEX aggregation"
authors = ["LiquidRoute Team <info@liquidroute.com>"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

[dependencies]
# Match Agave's exact version of geyser-plugin-interface
agave-geyser-plugin-interface = "=2.1.17"

# Essential dependencies for plugin functionality
anyhow = "1.0.91"
bincode = "1.3.3"
bs58 = { version = "0.5.1", default-features = false }
crossbeam-channel = "0.5.13"
log = "0.4.22"
serde = "1.0.213" # must match the serde_derive version
serde_derive = "1.0.213" # must match the serde version
serde_json = "1.0.132"
thiserror = "1.0.65"

# Additional JSON parser that's more forgiving of syntax errors
json5 = "0.4.1"

# Optional dependencies that match Agave's versions
serde_bytes = "0.11.15" 
serde_with = { version = "3.11.0", default-features = false }

# Command-line parsing for the config-check binary
clap = "2.33.1"

[build-dependencies]
anyhow = "1.0.91"

# Prevent panic propagation and enable better error handling
[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true