[package]
name = "liquidroute-geyser-plugin"
version = "0.1.0"
edition = "2021"
description = "LiquidRoute Geyser Plugin for DEX aggregation"
authors = ["LiquidRoute Team <info@liquidroute.com>"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Match Agave's exact version of geyser-plugin-interface
agave-geyser-plugin-interface = "=2.1.17"

# Only keep what's absolutely required
log = "0.4.22"

# Prevent panic propagation and enable better error handling
[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true